Sheet AI(취업할수있겠조)/final-project-backend/src/main/java/com/example/finalproject/exception/error/UserNotFoundException.java
package com.example.finalproject.exception.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
